--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<a href="github_repos.html">Look Up GitHub Repositories!</a>
+<html>
+  <head>
+    <link rel="stylesheet" href="build/css/vendor.css">
+    <link rel="stylesheet" href="build/css/styles.css">
+    <script src="build/js/vendor.min.js"></script>
+    <script type="text/javascript" src="build/js/app.js"></script>
+    <title>GitHub Accounts</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="title jumbotron">Search for a GitHub Account!</h1>
+      <h3 class="title">This App Let's You Search For a GitHub Account And View the Repositories Associated With That Account</h3>
+      <label for="name">Enter an account name:</label>
+      <input id="name" type="text">
+      <button class="btn btn-warning" id="button">Search for this account</button>
+      <div class="showAccounts"></div>
+      <div class="repoList">
+        <ul>
+        </ul>
+      </div>
+    </div>
+  </body>
+</html>
